c/include/unistd.h

__BEGIN_DECLS

extern ssize_t read(int fd, void *buf, size_t count);
extern ssize_t write(int fd, const void *buf, size_t count);
extern ssize_t pread(int fd, void *buf, size_t count, off_t offset);
extern ssize_t pwrite(int fd, const void *buf, size_t count, off_t offset);
/* scatter/gather I/O */
struct iovec;
extern ssize_t readv(int fd, const struct iovec *iov, int iovcnt);
extern ssize_t writev(int fd, const struct iovec *iov, int iovcnt);
extern int     close(int fd);
extern off_t   lseek(int fd, off_t offset, int whence);
extern int     dup(int oldfd);
extern int     dup2(int oldfd, int newfd);
extern int     pipe(int pipefd[2]);
extern int     pipe2(int pipefd[2], int flags);
extern pid_t   fork(void);
extern int     execve(const char *pathname, char *const argv[],
                      char *const envp[]);
extern int     execvp(const char *file, char *const argv[]);
extern void    _exit(int status);
extern pid_t   getpid(void);
extern pid_t   getppid(void);
extern int     setpgid(pid_t pid, pid_t pgid);
extern pid_t   getpgid(pid_t pid);
extern pid_t   getpgrp(void);
extern pid_t   setsid(void);
extern pid_t   getsid(pid_t pid);
extern int     chdir(const char *path);
extern int     fchdir(int fd);
extern char   *getcwd(char *buf, size_t size);
extern int     access(const char *pathname, int mode);
extern size_t  confstr(int name, char *buf, size_t len);
extern int     unlink(const char *pathname);
extern int     rmdir(const char *pathname);
extern int     mkdir(const char *pathname, mode_t mode);
extern int     link(const char *oldpath, const char *newpath);
extern int     symlink(const char *target, const char *linkpath);
extern ssize_t readlink(const char *pathname, char *buf, size_t bufsiz);
extern int     chmod(const char *pathname, mode_t mode);
extern int     fchmod(int fd, mode_t mode);
extern int     chown(const char *pathname, uid_t owner, gid_t group);
extern int     fchown(int fd, uid_t owner, gid_t group);
extern int     lchown(const char *pathname, uid_t owner, gid_t group);
extern int     rename(const char *oldpath, const char *newpath);
extern int     mkfifo(const char *pathname, mode_t mode);
extern void   *mmap(void *addr, size_t length, int prot, int flags,
                     int fd, off_t offset);
extern int     munmap(void *addr, size_t length);
extern int     isatty(int fd);
extern char   *ttyname(int fd);
extern int     ttyname_r(int fd, char *buf, size_t buflen);
extern long    pathconf(const char *path, int name);
extern long    fpathconf(int fd, int name);
extern size_t  confstr(int name, char *buf, size_t len);
extern int     faccessat(int dirfd, const char *pathname, int mode, int flags);
extern int     unlinkat(int dirfd, const char *pathname, int flags);
extern int     linkat(int olddirfd, const char *oldpath, int newdirfd,
                      const char *newpath, int flags);
extern int     symlinkat(const char *target, int newdirfd, const char *linkpath);
extern ssize_t readlinkat(int dirfd, const char *pathname, char *buf,
                          size_t bufsiz);
extern int     renameat(int olddirfd, const char *oldpath,
                        int newdirfd, const char *newpath);
extern int     fchownat(int dirfd, const char *pathname, uid_t owner,
                        gid_t group, int flags);
extern int     dup3(int oldfd, int newfd, int flags);
extern int     ftruncate(int fd, off_t length);
extern int     truncate(const char *path, off_t length);