c/include/pthread.h

/* =========================================================================
 * Opaque handle types
 * Sizes and layouts MUST match the Rust structs in pthread_impl.rs.
 * ========================================================================= */

/** Thread handle: opaque pointer into the ThreadControl pool. */
typedef void *pthread_t;
/**
 * pthread_mutex_t — 32 bytes, 8-byte aligned.
 * First 24 bytes: mutex state (TypedMutex / Mutex).
 * Byte 24: kind (0=NORMAL, 1=RECURSIVE, 2=ERRORCHECK).
 *
 * Use a union with an explicit 64-bit member rather than relying on
 * `__attribute__((aligned))` on an opaque typedef. Some consumers embed these
 * opaque pthread types inside other structs, and AArch64 atomic instructions
 * require naturally aligned addresses.
 */
typedef union {
    unsigned char __opaque[32];
    unsigned long long __align;
} pthread_mutex_t;
/**
 * pthread_cond_t — 8 bytes, 8-byte aligned.
 * Wraps sync::Condvar (single AtomicU32, padded to 8 bytes).
 */
typedef union {
    unsigned char __opaque[8];
    unsigned long long __align;
} pthread_cond_t;
/**
 * pthread_attr_t — 16 bytes.
 * stack_size: u64 (8 bytes) + detach_state: u32 (4 bytes) + pad: u32 (4 bytes).
 */
typedef struct {
    unsigned long long __stack_size;
    unsigned int       __detach_state;
    unsigned int       __pad;
} pthread_attr_t;
/** pthread_mutexattr_t — 4 bytes (kind: i32). */
typedef struct {
    int __kind;
} pthread_mutexattr_t;
/** pthread_condattr_t — 4 bytes (placeholder). */
typedef struct {
    unsigned int __unused;
} pthread_condattr_t;
/* =========================================================================
 * Thread lifecycle
 * ========================================================================= */

int  pthread_create(pthread_t *thread, const pthread_attr_t *attr,
                    void *(*start_routine)(void *), void *arg);
int  pthread_join(pthread_t thread, void **retval);
void pthread_exit(void *retval) __attribute__((noreturn));
pthread_t pthread_self(void);
int  pthread_detach(pthread_t thread);
int  pthread_equal(pthread_t t1, pthread_t t2);
int  pthread_cancel(pthread_t thread);
/* =========================================================================
 * Mutexes
 * ========================================================================= */

int pthread_mutex_init(pthread_mutex_t *mutex, const pthread_mutexattr_t *attr);
int pthread_mutex_lock(pthread_mutex_t *mutex);
int pthread_mutex_trylock(pthread_mutex_t *mutex);
int pthread_mutex_unlock(pthread_mutex_t *mutex);
int pthread_mutex_timedlock(pthread_mutex_t *mutex,
                            const struct timespec *abstime);
int pthread_mutex_destroy(pthread_mutex_t *mutex);
int pthread_mutexattr_init(pthread_mutexattr_t *attr);
int pthread_mutexattr_destroy(pthread_mutexattr_t *attr);
int pthread_mutexattr_settype(pthread_mutexattr_t *attr, int type);
int pthread_mutexattr_gettype(const pthread_mutexattr_t *attr, int *type);
/* =========================================================================
 * Condition variables
 * ========================================================================= */

int pthread_cond_init(pthread_cond_t *cond, const pthread_condattr_t *attr);
int pthread_cond_wait(pthread_cond_t *cond, pthread_mutex_t *mutex);
int pthread_cond_timedwait(pthread_cond_t *cond, pthread_mutex_t *mutex,
                           const struct timespec *abstime);
int pthread_cond_signal(pthread_cond_t *cond);
int pthread_cond_broadcast(pthread_cond_t *cond);
int pthread_cond_destroy(pthread_cond_t *cond);
int pthread_condattr_init(pthread_condattr_t *attr);
int pthread_condattr_destroy(pthread_condattr_t *attr);